<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg11"
    tools:context=".ContactDetailsPage">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/contact_details_page_title" />

    <TextView
        android:id="@+id/tVContactUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tVContactEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/emailId"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tVContactNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

</LinearLayout>