<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg9"
    tools:context=".ContactSearchPage">

    <TextView
        android:id="@+id/contactDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/details_page_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/fieldbackground"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/baseline_account_circle_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContactNameSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fieldbackground"
            android:hint="@string/enter_person_name_here"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnFindSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/btnbackground"
        android:text="@string/find"
        android:textColor="@color/white" />

</LinearLayout>